<resources>
    <string name="app_name">SocialDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Strings for login -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_name">用户名</string>
    <string name="register_pwd">密码</string>
    <string name="register_repwd">确认密码</string>

    <string name="add_context">Hello World！</string>
    <string name="send">发送</string>

    <string name="update_head">修改头像</string>

    <string name="logout">注销</string>

</resources>
