<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_register_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/register_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_register_repwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/register_repwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="43dp"
        android:background="@drawable/button_selector"
        android:text="@string/register"
        android:textColor="@color/white" />

</LinearLayout>
